<resources>
    <string name="app_name">exercise0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="circles">Circles</string>
    <string name="prime_number">Prime number</string>
    <string name="where_we_go">Where we go ?</string>
    <string name="thermohydrometer">Thermohydrometer</string>
    <string name="speech">Speech</string>
    <string name="super_calculations">Super Calculations</string>
</resources>